styles.css
* {
    font-family: 'Space Mono', monospace;
  /* border: 1px solid red; */
}

*:last-child {
    margin-bottom: 0;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}


body {
    display: flex;
    flex-direction: column;
    background-color: #7ea2a3;
    margin: 0 auto;
    animation: fadeIn .5s ease-in 1;
}

.highlight {
    background-color: #ed6d44;
    padding: 0 6px;
    margin: 0 -6px;
    border-radius: 2px;
}

h1 {
    font-size: 3.2rem;
    font-weight: 800;
    color: #191e1c;
    line-height: 1em;
    margin: 0;
    margin-bottom: -20px;
    text-transform: lowercase;
    font-style: italic;
    letter-spacing: -.2rem;
}

h2 {
    margin: 0;
    color: #ed6d44;
    font-size: 2rem;
    font-weight: 700;
    font-style: italic;
}

p {
    font-size: 1rem;
    font-weight: 500;
    color: #191e1c;
}

.main-container {
    margin: auto;
    max-width: 1400px;
}

.logo {
    font-size: 1rem;
    color: #7ea2a3;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 700;
    flex: 1;
}

.nav-link {
    color: #ed6d44;
    font-size: 1rem;
    text-decoration: none;
    text-transform: lowercase;
}

.nav-link:hover {
    color: #7ea2a3;
}

.nav-link-container {
    flex: 2;
    flex-wrap: nowrap;
    display: flex;
    gap: 35px;
    justify-content: end;
}

nav {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: nowrap;
    min-height: 25px;
    justify-content: space-between;
    padding: 20px 100px;
    color: #fbfcff;
    background-color: #e1e0e1;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 25px;
    justify-content: center;
    padding: 20px 100px;
    background-color: #e1e0e1;
}

.footer-text {
    margin: 0;
    text-transform: lowercase;
    color: #ed6d44;
}


.hero {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 70px;
    align-items: center;
    padding: 100px 100px;
    background-color: #e1e0e1;
    flex-wrap: wrap-reverse;
}

.hero-text-container {
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: start;
    align-content: space-around;
    gap: 25px;
    min-width: 400px;
}

.img-container {
    display: flex;
    flex: 1;
    width: 100%;
    height: 320px;
    min-width: 400px;

}

.img-container img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    border-radius: 3px;
}

.info-img-container {
    display: flex;
    justify-content: center;    
    max-width: 200px;
    max-height: 200px;
    align-items: center;
    align-content: center;
}

.info-img-container img {
    object-fit: cover;
    height: 100%;
    width: 100%;
    border-radius: 1000px;
    border: 2px dashed #e1e0e1;
}

.button, .cta-button {
    margin: 0;
    padding: 10px 20px;
    background-color: #7ea2a3;
    color: #fbfcff;
    border: none;
    border-radius: 3px;
    text-decoration: none;
    width: fit-content;
    height: fit-content;
    text-align: center;
}

.button:hover, .cta-button:hover {
    color: #191e1c;
    background-color: #ed6d44;
    
}

.information {
    background-color: #191e1c;
    padding: 100px 100px;
    display: flex;
    flex-direction: row;
    gap: 60px;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
    align-content: center;
}

.info-block {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-items: center;
    margin: 0 auto;
}

.info-block p {
    text-align: center;
    margin-bottom: 0;
    color: #fbfcff;
    font-size: 1rem;
    font-weight: 700;
    font-style: italic;
    letter-spacing: .2rem;
}

.quote {
    background-color: #191e1c;
    padding: 100px 100px;
    border-top: 2px dashed #e1e0e1;
    border-bottom: 2px dashed #e1e0e1;
}

.quote p {
    color: #7ea2a3;
    font-size: 1.5rem;
    font-weight: 500;
    font-style: italic;
    text-align: left;
    margin: 0;
    margin-bottom: 1rem;
}

#quote-author {
    text-align: right;
    font-weight: 700;
    letter-spacing: .4rem;
    text-transform: lowercase;
    font-style: italic;
}

#i1 {
    filter: hue-rotate(25deg);
}

#i2 {
    filter: hue-rotate(50deg);
}
#i3 {
    filter: hue-rotate(100deg);
}
#i4 {
    filter: hue-rotate(200deg);
}

.cta {
    padding: 100px 100px;
    display: flex;
    margin: 0 auto;
    justify-content: center;
    background-color: #191e1c;
}

.cta-block {
    background-color: #191e1c;
    border: 2px dashed #ed6d44;
    width: 100%;
    min-height: 180px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: start;
    align-content: center;
    border-radius: 6px;
    padding: 80px 80px;
    flex-wrap: wrap;
    gap: 25px;
}

.cta-text {
    color: #e1e0e1;
}

.cta-button {
    flex: .4;
}

.cta-text-container {
    flex: 2;
}

@media screen and (max-width: 800px) {

    .hero, .information, .cta {
        padding: 100px 20px;
    }

    .hero {
        padding-top: 20px;
        gap: 20px;
    }

    .information {
        gap: 100px;
    }

    .quote {
        padding: 100px 20px;
    }

    .logo {
        flex: 3;
    }

    .img-container {
        max-height: 200px;
    }

    nav, footer {
        padding: 20px 20px;
    }

    .cta-block {
        padding: 40px 40px;
    }

    body {
        background-color: #e1e0e1;
    }
}

